--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-awesome-slider": "^4.1.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-scrollspy": "^3.4.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
